--- a/spring-todo-list/src/main/resources/application.properties
+++ b/spring-todo-list/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/TaskListDB
+spring.datasource.url=jdbc:postgresql://localhost:5432/tasklistdb
 spring.datasource.username=postgres
 spring.datasource.password=test
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+logging.level.org.springframework=DEBUG
+server.port = 8090
